<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>

    <groupId>com.photoexhibition</groupId>
    <artifactId>photo-exhibition-backend</artifactId>
    <version>1.0.0</version>
    <name>Photo Exhibition Backend</name>
    <description>高端摄影作品展示平台后端</description>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- ONNX Runtime classifier for platform detection -->
        <onnx.classifier></onnx.classifier>
    </properties>

    <dependencies>
        <!-- Spring Boot Web -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Spring Boot Data JPA -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- H2 Database (嵌入式数据库，简化部署) -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.1.214</version>
            <scope>runtime</scope>
        </dependency>

        <!-- MySQL Driver (仅在需要时使用) -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.2.0</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Redis -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- EXIF提取 -->
        <dependency>
            <groupId>com.drewnoakes</groupId>
            <artifactId>metadata-extractor</artifactId>
            <version>2.18.0</version>
        </dependency>

        <!-- 图片处理 -->
        <dependency>
            <groupId>net.coobird</groupId>
            <artifactId>thumbnailator</artifactId>
            <version>0.4.20</version>
        </dependency>

        <!-- WebP支持 (可选，暂时移除，可通过ImageIO扩展实现) -->
        <!-- 如需WebP支持，可以：
             1. 使用命令行工具 (cwebp/dwebp)
             2. 使用ImageIO扩展插件
             3. 或集成其他WebP库
        -->

        <!-- 文件监控 -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
        </dependency>

        <!-- 色彩分析 -->
        <dependency>
            <groupId>org.imgscalr</groupId>
            <artifactId>imgscalr-lib</artifactId>
            <version>4.2</version>
        </dependency>

        <!-- Validation -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- ONNX Runtime for AI功能 -->
        <dependency>
            <groupId>com.microsoft.onnxruntime</groupId>
            <artifactId>onnxruntime</artifactId>
            <version>1.8.1</version>
            <classifier>${onnx.classifier}</classifier>
        </dependency>

        <!-- Jackson JSR310支持（Java 8时间类型） -->
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>

        <!-- JWT支持 -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.11.5</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.11.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.11.5</version>
            <scope>runtime</scope>
        </dependency>

        <!-- BCrypt密码加密 -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-crypto</artifactId>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                    <!-- 添加JVM参数解决Windows bat文件中的中文乱码问题 -->
                    <jvmArgs>
                        <jvmArg>-Dfile.encoding=UTF-8</jvmArg>
                        <jvmArg>-Dsun.stdout.encoding=UTF-8</jvmArg>
                        <jvmArg>-Dsun.stderr.encoding=UTF-8</jvmArg>
                    </jvmArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- Profiles for ONNX Runtime CPU/GPU selection -->
    <profiles>
        <!-- 默认profile：自动检测平台（推荐） -->
        <profile>
            <id>auto</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!-- ONNX Runtime 1.8.1 platform classifiers -->
                <onnx.classifier.osx-x86_64>osx-x86_64</onnx.classifier.osx-x86_64>
                <onnx.classifier.osx-arm64>osx-arm64</onnx.classifier.osx-arm64>
                <onnx.classifier.linux-x86_64>linux-x86_64</onnx.classifier.linux-x86_64>
                <onnx.classifier.linux-aarch64>linux-aarch64</onnx.classifier.linux-aarch64>
                <onnx.classifier.windows-x86_64>win-x64</onnx.classifier.windows-x86_64>

                <!-- 自动选择适合当前系统的classifier -->
                <!-- ONNX 1.8.1可能没有osx-arm64，尝试通用版本 -->
                <onnx.classifier></onnx.classifier>
            </properties>
        </profile>

        <!-- 强制CPU版本（生产环境推荐） -->
        <profile>
            <id>cpu</id>
            <dependencies>
                <dependency>
                    <groupId>com.microsoft.onnxruntime</groupId>
                    <artifactId>onnxruntime</artifactId>
                    <!-- 1.16.3更优，1.8.1兼容旧服务器的版本 -->
                    <!-- <version>1.16.3</version> -->
                    <version>1.8.1</version>
                    <!-- 不指定classifier，自动选择CPU版本 -->
                </dependency>
            </dependencies>
        </profile>

        <!-- 新版本（更好的性能，需测试兼容性） -->
        <profile>
            <id>latest</id>
            <dependencies>
                <dependency>
                    <groupId>com.microsoft.onnxruntime</groupId>
                    <artifactId>onnxruntime</artifactId>
                    <version>1.8.1</version>
                    <classifier>osx-aarch64</classifier>
                </dependency>
            </dependencies>
        </profile>

        <!-- GPU版本（需要CUDA支持，仅限有GPU的环境） -->
        <profile>
            <id>gpu</id>
            <dependencies>
                <dependency>
                    <groupId>com.microsoft.onnxruntime</groupId>
                    <artifactId>onnxruntime</artifactId>
                    <version>1.8.1</version>
                    <classifier>gpu</classifier>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
